@@ -72,6 +72,7 @@
     <File name="Widgets/DataGrid/Views/TextVisualizerView.cs" subtype="Code" buildaction="Compile" />
     <File name="Widgets/DataGrid/Views/ImageVisualizerView.cs" subtype="Code" buildaction="Compile" />
     <File name="Codons/DataGridVisualizerCodon.cs" subtype="Code" buildaction="Compile" />
+    <File name="Widgets/DataGrid/Visualizers/DefaultVisualizers.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
