@@ -2,7 +2,7 @@
 // Authors:
 //   Ben Motmans  <ben.motmans@gmail.com>
 //
-// Copyright (c) 2008 Ben Motmans
+// Copyright (c) 2007 Ben Motmans
 //
 // Permission is hereby granted, free of charge, to any person obtaining a copy
 // of this software and associated documentation files (the "Software"), to deal
@@ -25,70 +25,55 @@
 
 using Gtk;
 using System;
-using System.Collections.Generic;
+using System.Data;
 using Mono.Addins;
-using MonoDevelop.Database.Sql;
 using MonoDevelop.Core;
-using MonoDevelop.Core.Gui;
-using MonoDevelop.Components;
 using MonoDevelop.Ide.Gui;
 
 namespace MonoDevelop.Database.Components
 {
-	public class TextVisualizerView : AbstractViewContent
+	public class ImageVisualizer : IDataGridVisualizer
 	{
-		private VBox vbox;
-		private ScrolledWindow scrolledWindow;
-		private TextView textView;
-		
-		public TextVisualizerView ()
-		{
-			vbox = new VBox (false, 6);
-			vbox.BorderWidth = 6;
-			
-			TextTagTable tagTable = new TextTagTable ();
-			TextBuffer buffer = new TextBuffer (tagTable);
-			textView = new TextView (buffer);
-
-			scrolledWindow = new ScrolledWindow ();
-			scrolledWindow.AddWithViewport (textView);
-			
-			vbox.PackStart (scrolledWindow, true, true, 0);
-			
-			vbox.ShowAll ();
-		}
-
-		public override string UntitledName {
+		public string Name {
 			get { return AddinCatalog.GetString ("Image"); }
 		}
 		
-		public override void Dispose ()
+		public bool CanVisualize (object dataObject)
 		{
-			Control.Destroy ();
-		}
-		
-		public override void Load (string filename)
-		{
-			throw new NotSupportedException ();
-		}
-		
-		public override Widget Control {
-			get { return vbox; }
-		}
-		
-		public void Load (object dataObject)
-		{
-			if (dataObject != null) {
-				Type type = dataObject.GetType ();
-				if (type == typeof (byte[]))
-					textView.Buffer.Text = System.Text.Encoding.UTF8.GetString (dataObject as byte[]);
-				else
-					textView.Buffer.Text = dataObject.ToString ();
-
-				return;
-			}
+			if (dataObject == null)
+				return false;
 			
-			textView.Buffer.Text = String.Empty;
+			return dataObject.GetType () == typeof (byte[]);
+		}
+		
+		public void Visualize (object dataObject)
+		{
+			ImageVisualizerView view = new ImageVisualizerView ();
+			view.Load (dataObject);
+			IdeApp.Workbench.OpenDocument (view, true);
+		}
+	}
+	
+	public class TextVisualizer : IDataGridVisualizer
+	{
+		public string Name {
+			get { return AddinCatalog.GetString ("Text"); }
+		}
+		
+		public bool CanVisualize (object dataObject)
+		{
+			if (dataObject == null)
+				return false;
+			
+			Type type = dataObject.GetType ();
+			return type == typeof (string) || type == typeof (byte[]) || type.IsPrimitive;
+		}
+		
+		public void Visualize (object dataObject)
+		{
+			TextVisualizerView view = new TextVisualizerView ();
+			view.Load (dataObject);
+			IdeApp.Workbench.OpenDocument (view, true);
 		}
 	}
 }
